--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,6 +49,17 @@ microservice {
         port     = 8500
       }
 
+      digital-services-tax-frontend {
+        protocol = http
+        host     = localhost
+        port     = 8740
+      }
+
+      digital-services-tax {
+        host = localhost
+        port = 8741
+      }
+
       feedback-frontend {
         protocol = http
         host     = localhost
