--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,10 +51,14 @@ microservice {
         port = 8741
       }
 
-      feedback-frontend {
-        protocol = http
-        host     = localhost
-        port     = 9514
+      company-auth {
+        url = "http://localhost:9025"
+        sign-in-path = "/gg/sign-in"
+        sign-out-path = "/gg/sign-out"
+      }
+
+      feedback-survey {
+        url = "http://localhost:9514/feedback/DST"
       }
     }
 }
@@ -81,7 +85,6 @@ mongodb {
 urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
   loginContinue = "http://localhost:8743/digital-services-tax-returns"
-  signOut       = "http://localhost:9025/gg/sign-out"
 }
 
 host = "http://localhost:9000"
