DDCYLS-3209:Remove unused val and enable CSPFilter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,7 +18,7 @@ appName="digital-services-tax-returns-frontend"
 
 play.http.router = prod.Routes
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:9250 localhost:12345 www.google-analytics.com www.googletagmanager.com"
+play.filters.enabled += play.filters.csp.CSPFilter
 
 play.http.errorHandler = "handlers.ErrorHandler"
 
@@ -87,8 +87,6 @@ urls {
   loginContinue = "http://localhost:8743/digital-services-tax-returns"
 }
 
-host = "http://localhost:9000"
-
 accessibility-statement{
   service-path = "/digital-services-tax-returns-frontend"
 }
@@ -97,8 +95,3 @@ tracking-consent-frontend {
   gtm.container = "transitional"
 }
 
-features {
-  welsh-translation: true
-}
-
-ccgEmail = "ccgdstmailbox@hmrc.gov.uk"
