DDCYLS-3209:enable CSPFilter and optimise imports

--- a/test/resources/application.conf
+++ b/test/resources/application.conf
@@ -12,7 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-play.filters.disabled += "play.filters.csrf.CSRFFilter"
+play.filters.disabled += "play.filters.csp.CSPFilter"
+play.filters.disabled+=play.filters.csrf.CSRFFilter
 
 play.http.secret.key = "some_secret"
 
