--- a/.g8/currencyPage/default.properties
+++ b/.g8/currencyPage/default.properties
@@ -1,4 +1,3 @@
 description = Generates a controller and view for a page with a single integer question
-className = IntPageName
-minimum = 0
-maximum = Int.MaxValue
+className = CurrencyPageName
+fieldMaxLength = 15
