Update sign-out to comply with OLFG

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,6 +38,10 @@ microservice {
         port     = 8500
       }
 
+      bas-gateway {
+        host = "http://localhost:9553"
+      }
+
       digital-services-tax-frontend {
         protocol = http
         host     = localhost
@@ -52,7 +56,7 @@ microservice {
       company-auth {
         url = "http://localhost:9025"
         sign-in-path = "/gg/sign-in"
-        sign-out-path = "/gg/sign-out"
+        sign-out-path = "/bas-gateway/sign-out-without-state"
       }
 
       feedback-survey {
