DDCYLS-7215: Gov uk rebrand feature flag on

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,6 +92,11 @@ tracking-consent-frontend {
   gtm.container = "transitional"
 }
 
+# GOV UK Rebrand
+play-frontend-hmrc {
+    useRebrand = true
+}
+
 feature {
   dstNewReturnsFrontendEnable = true
 }
